--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+              <a class="nav-link" [routerLink]="['/books']">Books</a>
+          </li>
+          <li class="nav-item">
+              <!-- <a class="nav-link" [routerLink]="['/employee']">Employee</a> -->
+          </li>
+      </ul>
+  </div>
+</nav>
