--- a/src/app/views/book/book-info/book-info.component.html
+++ b/src/app/views/book/book-info/book-info.component.html
@@ -1,1 +1,8 @@
-<p>book-info works!</p>
+<p style="float: left;"><b>Chi tiết sách</b> </p>
+<button style="float: right;" class="btn btn-square btn-primary btn-sm" routerLink="/books">Xem danh sách</button>
+<br><br>
+<div >
+  <p style="left: 0;">Tiêu đề: {{book.title}}</p>
+  <p>Tác giả: {{book.author}}</p>
+  <p>Mô tả: {{book.description}}</p>
+</div>
