--- a/src/app/views/book/book-list/book-list.component.html
+++ b/src/app/views/book/book-list/book-list.component.html
@@ -1,1 +1,25 @@
-<p>book-list works!</p>
+<!-- Search form -->
+<div class="md-form mt-0">
+  <input class="form-control" type="text" placeholder="Search" aria-label="Search" [(ngModel)]='key'>
+</div>
+
+<div>
+  <p style="float: left;"> Có <span>{{bookLength}}</span> cuốn sách</p>
+  <button style="margin: 5px; float: right;" class="btn btn-square btn-primary btn-sm" routerLink="/books/create">Thêm mới sách</button>
+</div>
+<div>
+  <table class="table ">
+    <tr>
+      <th>#</th>
+      <th>Tên sách</th>
+      <th>Tác giả</th>
+    </tr>
+    <tr *ngFor="let book of bookList; let i = index">
+      <td>{{i+1}}</td>
+      <td><a style="text-decoration: none;" [routerLink] = "['/books/info', book.id]">{{book.title}}</a></td>
+      <td>{{book.author}}</td>
+      <td scope="row"><button class="btn btn-square btn-secondary btn-sm" [routerLink] = "['/books/edit',book.id]" >Sửa</button></td>
+      <td><button class="btn btn-square btn-danger btn-sm" (click) = "deleteBookById(book.id)">Delete</button></td>
+    </tr>
+  </table>
+</div>
