--- a/src/app/views/footer/footer.component.html
+++ b/src/app/views/footer/footer.component.html
@@ -1,53 +1,101 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<footer id="footer" class="clearfix">
+      <div id="footer-widgets">
 
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-<footer>
-     <div class="container-fluid bg-primary py-3">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-7">
-            <div class="row py-0">
-          <div class="col-sm-1 hidden-md-down">
-              <a class="bg-circle bg-info" href="#">
-                <i class="fa fa-2x fa-fw fa-address-card" aria-hidden="true "></i>
-              </a>
-            </div>
-            <div class="col-sm-11 text-white">
-                <div><h4>Kira</h4>
-                    <p>   <span class="header-font"></span><span class="header-font"></span>datdhvinh@gmail.com</p>
+        <div class="container">
+
+        <div id="footer-wrapper">
+
+          <div class="row">
+            <div class="col-sm-6 col-md-2">
+              <div id="meta-3" class="widget widgetFooter widget_meta">
+              <h4 class="widgettitle">Importent Page :</h4>
+              <ul>
+    		  <li><a href="#"><i class="fa fa-home fa-fw"></i> Home</a></li>
+			  <li><a href="privacypolicy.php"><i class="fa fa-link"></i>   Privacy Policy</a></li>
+			  <li><a href="#"><i class="fa fa-envelope fa-fw"></i> Contact Us</a></li>
+             </ul>
+</div>      </div> <!-- end widget1 -->
+
+            <div class="col-sm-6 col-md-2">
+              		<div id="recent-posts-3" class="widget widgetFooter widget_recent_entries">
+                    <h4 class="widgettitle">Our social media :</h4>
+                    <ul>
+					<li>
+				     <a href="https://www.facebook.com/mr.dauod" target="_blank"><i class="fa fa-facebook"></i> Facebook</a>
+					</li>
+					<li>
+				      <a href="https://www.twitter.com/ayatquranCom" target="_blank"><i class="fa fa-twitter"></i> Twitter</a>
+					</li>
+					<li>
+				      <a href="http://www.youtube.com/user/sonsofye" target="_blank"><i class="fa fa-youtube"></i> Youtube</a>
+				   </li>
+				</ul>
+		</div>            </div> <!-- end widget1 -->
+
+            <div class="col-sm-6 col-md-4">
+              <div id="meta-4" class="widget widgetFooter widget_meta">
+              <h4 class="widgettitle">Subscribe :</h4>
+
+              <div class="form-group">
+                <div class="input-group">
+                  <span class="input-group-addon">E-mail :</span>
+                  <input class="form-control" placeholder="Write your email .." type="text">
                 </div>
-            </div>
-            </div>
-        </div>
-        <div class="col-md-5">
-          <div class="d-inline-block">
-            <div class="bg-circle-outline d-inline-block" style="background-color:#3b5998">
-              <a href="https://www.facebook.com/"><i class="fa fa-2x fa-fw fa-facebook text-white"></i></a>
-            </div>
-            <div class="bg-circle-outline d-inline-block" style="background-color:#4099FF">
-              <a href="https://twitter.com/">
-                <i class="fa fa-2x fa-fw fa-twitter text-white"></i></a>
-            </div>
+              </div>
 
-            <div class="bg-circle-outline d-inline-block" style="background-color:#0077B5">
-              <a href="https://www.linkedin.com/company/">
-                <i class="fa fa-2x fa-fw fa-linkedin text-white"></i></a>
+              <div class="form-group">
+                <div class="input-group">
+                  <span class="input-group-addon">Phone  :</span>
+                  <input class="form-control" placeholder="+96777000000" type="text">
+                   <span class="input-group-btn">
+                    <button class="btn btn-primary" type="button">Subscribe !</button>
+                  </span>
+                </div>
+              </div>
+
+
+              </div>
+             </div> <!-- end widget1 -->
+
+            <div class="col-sm-6 col-md-4">
+              <div id="search-3" class="widget widgetFooter widget_search"><h4 class="widgettitle">Search in Faploo :</h4>
+
+                <div class="form-group">
+                                <label class="control-label">Write what you want to search for it  :</label>
+                                <div class="input-group">
+                                  <span class="input-group-addon">Keyword :</span>
+                                  <input class="form-control" placeholder="Keyword for search ..." type="text">
+                                   <span class="input-group-btn">
+                                    <button class="btn btn-primary" type="button">Search !</button>
+                                  </span>
+                                </div>
+                              </div>
+
+                </div>            </div> <!-- end widget1 -->
+
+          </div> <!-- end .row -->
+
+        </div> <!-- end #footer-wrapper -->
+
+        </div> <!-- end .container -->
+      </div> <!-- end #footer-widgets -->
+
+      <div id="sub-floor">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 copyright">
+             Copy right for Faploo © 2015
             </div>
-            <div class="bg-circle-outline d-inline-block" style="background-color:#d34836">
-              <a href="https://www.google.com/">
-                <i class="fa fa-2x fa-fw fa-google text-white"></i></a>
+            <div class="col-md-4 col-md-offset-4 attribution">
+             Developer by  <a target="_blank" href="#">Faploo team</a> .
             </div>
-          </div>
+          </div> <!-- end .row -->
         </div>
       </div>
-    </div>
-    </div>
-</footer>
-    <!--/.footer-->
-<p class="text-center"> Copyright © by Kira Plugin 2020. All right reserved. </p>
-    <!--/.footer-bottom-->
+
+    </footer>
