--- a/src/app/views/footer/footer.component.html
+++ b/src/app/views/footer/footer.component.html
@@ -51,7 +51,7 @@
               <div class="form-group">
                 <div class="input-group">
                   <span class="input-group-addon">Phone  :</span>
-                  <input class="form-control" placeholder="+96777000000" type="text">
+                  <input class="form-control" placeholder="+84967838708" type="text">
                    <span class="input-group-btn">
                     <button class="btn btn-primary" type="button">Subscribe !</button>
                   </span>
@@ -63,7 +63,7 @@
              </div> <!-- end widget1 -->
 
             <div class="col-sm-6 col-md-4">
-              <div id="search-3" class="widget widgetFooter widget_search"><h4 class="widgettitle">Search in Faploo :</h4>
+              <div id="search-3" class="widget widgetFooter widget_search"><h4 class="widgettitle">Search in Kira :</h4>
 
                 <div class="form-group">
                                 <label class="control-label">Write what you want to search for it  :</label>
@@ -89,10 +89,10 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4 copyright">
-             Copy right for Faploo © 2015
+             Copy right for Kira © 2020
             </div>
             <div class="col-md-4 col-md-offset-4 attribution">
-             Developer by  <a target="_blank" href="#">Faploo team</a> .
+             Developer by  <a target="_blank" href="#">Kira</a> .
             </div>
           </div> <!-- end .row -->
         </div>
