--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -5,8 +5,11 @@
               <a class="nav-link" [routerLink]="['/books']">Books</a>
           </li>
           <li class="nav-item">
-              <!-- <a class="nav-link" [routerLink]="['/employee']">Employee</a> -->
+              <a class="nav-link" >Test1</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" >Test2</a>
+        </li>
       </ul>
   </div>
 </nav>
