--- a/src/app/views/book/book-list/book-list.component.html
+++ b/src/app/views/book/book-list/book-list.component.html
@@ -18,7 +18,7 @@
       <td>{{i+1}}</td>
       <td><a style="text-decoration: none;" [routerLink] = "['/books/info', book.id]">{{book.title}}</a></td>
       <td>{{book.author}}</td>
-      <td scope="row"><button class="btn btn-square btn-secondary btn-sm" [routerLink] = "['/books/edit',book.id]" >Sửa</button></td>
+      <td scope="row"><button class="btn btn-square btn-success btn-sm" [routerLink] = "['/books/edit',book.id]" >Sửa</button></td>
       <td><button class="btn btn-square btn-danger btn-sm" (click) = "deleteBookById(book.id)">Delete</button></td>
     </tr>
   </table>
